Fix create block history and input z-index.

--- a/src/graph/DataPin.scss
+++ b/src/graph/DataPin.scss
@@ -47,7 +47,6 @@
     margin-top:-2px;
 
     position: absolute;
-    z-index: 1;
   }
 
 
@@ -56,6 +55,5 @@
     height: 20px;
     margin-top: -2px;
     position: absolute;
-    z-index: 1;
   }
 }
